[package]
name = "ct-tilemap"
version = "1.0.0"
edition = "2021"
description = "A library to help parse ClickTeam Tilemap files."
license = "MIT"
repository =

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1"
libflate = "2"
bytemuck = { version = "1", features = ["derive"] }

[dev-dependencies]
const-str = "0.5"